[package]
name = "pgoutput2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/parse.rs"

[dependencies]
bytes = "1.1.0"
chrono = "0.4.19"
postgres-types = "0.2.2"

[dev-dependencies]
glob = "0.3.0"
